[package]
name = "mybittorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.10.1"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
